--- a/nschl002/src/main/resources/ValidationMessages.properties
+++ b/nschl002/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,1 @@
-guteadresse=Adress has to match format '<Street> <Nr.>, <PLZ> <City>'.
+guteadresse=Adress has to match format '<Street> <House number>, <Postcode> <City>'.
