created Benutzer Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+# JDBC-Datenbank URI, Benutzer/Passwort setzen
+spring.datasource.url=jdbc:h2:mem:bratenbank
+spring.datasource.username=h2
+spring.datasource.password=h2
+# Automatisch Tabellen etc. aus Entities anlegen
+spring.jpa.generate-ddl=true
+# Bei jedem Anwendungsstart Datenbank droppen und frisch anlegen
+# Im in-memory-Betrieb weniger interessant, spaeter mit DB-Dateien aber schon.
+spring.jpa.hibernate.ddl-auto=create-drop
+# SQL-Logging im Spring-Boot-Log aktivieren zu Guck- und Testzwecken
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
