fixed DELETE bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 # SQL-Logging im Spring-Boot-Log aktivieren zu Guck- und Testzwecken
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+server.port = 9090
